<resources>
    <string name="app_name">RideXConductor</string>
    <string name="skip">Saltar</string>
    <string name="back">Atrás</string>
    <string name="welcome_main">Bienvenido</string>
    <string name="welcome_secondary">Trabaja cuando quieras y el tiempo que desees</string>
    <string name="textLogin">Iniciar Sesión</string>
    <string name="textCreateAccount">Crear Cuenta</string>
    <string name="signUpMain">Regístrate con tu email o número de celular</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintEmail">Email</string>
    <string name="hintCelular">Tu número de celular</string>
    <string name="privacy">Al registrarte, aceptas los Términos de servicio y la Política de privacidad.</string>
    <string name="signupgoogle">Registrarse con Google</string>
    <string name="signupface">Registrarse con Facebook</string>
    <string name="signupapple">Registrarse con Apple</string>
    <string name="haveanaccount">¿Ya tienes una cuenta?</string>
    <string name="otpver">Verificación OTP</string>
    <string name="enterotp">Ingresa tu código OTP</string>
    <string name="norecieveopt">No recibiste el código</string>
    <string name="reenviar">Volver a enviar</string>
    <string name="verify">Verificar</string>
    <string name="setpassword">Establecer contraseña</string>
    <string name="setyourpassword">Establece tu contraseña</string>
    <string name="enterpassword">Ingresar Contraseña</string>
    <string name="confirmpassword">Confirmar Contraseña</string>
    <string name="validatepassword">Al menos un numero o caracter especial</string>
    <string name="register">Registrar</string>
    <string name="signinMain">Inicia sesión con tu email o número de celular</string>
    <string name="hintLoginCelular">Email o número de celular</string>
    <string name="hintLoginPassword">Ingresa tu contraseña</string>
    <string name="donthaveanaccount">¿No tienes una cuenta?</string>
    <string name="forgotpassword">¿Olvidaste tu contraseña?</string>
    <string name="signingoogle">Ingresar con Google</string>
    <string name="signinface">Ingresar con Facebook</string>
    <string name="signinapple">Ingresar con Apple</string>
    <string name="verificationpasswordotp">Ingresar email o número de celular</string>
    <string name="enviarotp">Enviar OTP</string>
    <string name="setnewpassword">Establecer nueva contraseña</string>
    <string name="setyoutnewpassword">Establece tu nueva contraseña</string>
    <string name="save">Guardar</string>
    <string name="profile">Perfil</string>

    <string name="fullname">Nombre Completo</string>
    <string name="street">Dirección</string>
    <string name="city">Ciudad</string>

    <string name="cancel">Cancelar</string>

    <string name="stepsrequiredmain">Por favor llena todos los pasos requeridos</string>
    <string name="stepsrequiredsecondary">Esto es lo que debes hacer para terminar de configurar tu cuenta</string>
    <string name="profilephoto">Foto de Perfil</string>
    <string name="driverslicense">Licencia de Conducción</string>
    <string name="vehicleensurance">Seguro de Vehículo</string>
    <string name="vehiclecertificate">Certificado de Registro del Vehículo</string>
    <string name="profilephotomain">Toma tu Foto de Perfil</string>
    <string name="profilephotosecondary">La foto de perfil nos ayuda a reconocerte. Por favor ten en cuenta que una vez aceptes tu foto de perfil no podrá ser cambiada</string>
    <string name="profilephotostep1">1. Pon tu rostro en frente de la cámara con tus ojos y boca visibles</string>
    <string name="profilephotostep2">2. Asegúrate de que tu foto este sin reflejos y enfocada.</string>
    <string name="profilephotostep3">3. No tomar foto de una foto, filtros o alguna alteración a la misma.</string>

    <string name="licensephotomain">Toma una foto de tu licencia de conducción por ambos lados</string>
    <string name="licensephotosecondary">La foto de tu licencia nos ayuda a validar que seas una persona apta para conducir. Por favor ten en cuenta que una vez aceptes las fotos de tu licencia no podrá ser cambiada</string>
    <string name="licensephotostep1">1. Tomale foto primero a la parte trasera de tu licencia y guardala antes que la parte frontal</string>
    <string name="licensephotostep2">2. Asegúrate que tu licencia de conducción es válida para conducir el vehículo que piensas manejar en RideX..</string>
    <string name="licensephotostep3">3. Asegúrate que todos tus datos sean completamente legibles, que la foto no este borrosa y que no haya ningún tipo de reflejo..</string>
    <string name="licensephotoconfirmationsecondary">Asegúrate que todos los datos sean legibles.</string>
    <string name="licensephotoconfirmationback">Añadir Parte Trasera</string>
    <string name="licensephotoconfirmationfrontal">Añadir Parte Delantera</string>

    <string name="next">Siguiente</string>

    <string name="profilephotoconfirmationmain">¿Quieres usar esta foto?</string>
    <string name="profilephotoconfirmationsecondary">Oprimiendo en “Guardar” aceptas que RideX collecte y procese tu foto para verificar tu identidad</string>

    <string name="btn_retake">Tomar de Nuevo</string>
    <string name="btn_save">Guardar</string>

    <string name="thanks_profilephotomain">Gracias por tu Foto</string>
    <string name="thanks_licensephotomain">Gracias por proporcionar tu Licencia de Conducción</string>
    <string name="next_step">Ir al siguiente paso</string>

    <string name="config">Configuracion</string>
    <string name="wallet">Cartera</string>
    <string name="balance">Balance</string>
    <string name="muestradinero">0.00$</string>
    <string name="fee">Comision - 0.00$</string>
    <string name="cashout">Retiro</string>
    <string name="detallescomision">Recuerde que puede visitar la politica de comisiones en nuestra pagina</string>
    <string name="tarjeta">Tarjeta - 0000</string>
    <string name="accept">Aceptar</string>
    <string name="success">La operacion ha sido completada con exito</string>
    <string name="fail">La operacion no ha posido ser completada</string>
    <string name="regresar">Regresar</string>
    <string name="ride">Carreras</string>
    <string name="tips">Propinas</string>
    <string name="breakdown">Resultados</string>
    <string name="rundetails">Detalles de carrera</string>
    <string name="earn">Ganancia</string>
    <string name="disconnected">Desconectado</string>
    <string name="connected">Conectado</string>
    <string name="nombre">Jaimito</string>
    <string name="destino">Destino</string>
    <string name="inicio">Origen</string>
    <string name="popupcarrera">Carrera</string>
    <string name="canceldetails">Cuentanos cual es el motico por el cual cancelas el viaje</string>
    <string name="detallesccartera">Detalles de carreras</string>
    <string name="carreras">Carrera</string>
    <string name="aclaraciones">Recuerda que tardara unos minutos para que el dinero llegue a tu cuenta,
    dado que utilizamosun sello de seguridad para validar todas las transacciones, con el fin de evitar robos</string>

    <string name="google_maps_key">AIzaSyDTEz7xpTebji1pvoAEHbOxFYF-lkvDM5g</string>
    
</resources>